# Kandidatarbete-NES-Emulator

./: .clang-format  .gitignore  CMakeLists.txt  premake5.lua
assembler/: CMakeLists.txt  runasm.cpp
assembler/LuaJIT/src/: luajit
assembler/LuaJIT/src/host/: buildvm  minilua
debugger/: CMakeLists.txt  cache.h  debugger.cpp  imgui_log.h
debugger/src/: basic_log.h  debugger.cpp  debugger.h  main.cpp
emscripten/: Makefile  autobuild  layout.html
emscripten/bubblesort/: index.js  index.wasm  index.worker.js
emscripten/debugger/: index.html  index.js  index.wasm
ext/: CMakeLists.txt
llvmes-gui/: CMakeLists.txt
llvmes-gui/glad/: premake5.lua
llvmes-gui/src/llvmes-gui/: application.cpp  buffers.cpp  draw.cpp  event.h  log.cpp  log.h  opengl.h  shader.cpp  texture.cpp  window.cpp
llvmes-gui/src/llvmes-gui/imgui/: imgui_layer.cpp  imgui_renderer.cpp
playground/: CMakeLists.txt  bubblesort_vis.cpp  bubblesort_web.cpp  imgui_demo.cpp
src/llvmes/: CMakeLists.txt  time.h
src/llvmes/common/: CMakeLists.txt  log.cpp
src/llvmes/graphics/: CMakeLists.txt  application.cpp  application.h  event.h  log.cpp  log.h  window.cpp  window.h
src/llvmes/graphics/imgui/: imgui_layer.cpp  imgui_layer.h  imgui_renderer.cpp
src/llvmes/interpreter/: CMakeLists.txt
src/llvmes/nes/: CMakeLists.txt
